Fix video mute on mobile (#51)

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -329,7 +329,7 @@
 
 .sectionHeader {
   display: flex;
-  grid-column: 1 / -1;
+  grid-column: 2 / -2;
   align-items: center;
   justify-content: center;
   width: 100%;
